storage/innobase/include/page0cur.h
@@ -1,7 +1,7 @@
 /*****************************************************************************
 
 Copyright (c) 1994, 2016, Oracle and/or its affiliates. All Rights Reserved.
-Copyright (c) 2018, 2020, MariaDB Corporation.
+Copyright (c) 2018, 2021, MariaDB Corporation.
 
 This program is free software; you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
@@ -205,7 +205,7 @@ page_cur_delete_rec(
 written by page_cur_insert_rec_low() for a ROW_FORMAT=REDUNDANT page.
 @param block      B-tree or R-tree page in ROW_FORMAT=COMPACT or DYNAMIC
 @param reuse      false=allocate from PAGE_HEAP_TOP; true=reuse PAGE_FREE
-@param prev       byte offset of the predecessor, relative to PAGE_NEW_INFIMUM
+@param prev       byte offset of the predecessor, relative to PAGE_OLD_INFIMUM
 @param enc_hdr    encoded fixed-size header bits
 @param hdr_c      number of common record header bytes with prev
 @param data_c     number of common data bytes with prev
